[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cass-logger-dev"
version = "0.1.0"
description = "Python package for interfacing with the Cass data logger"
requires-python = ">=3.12"
authors = [
  { name = "Matt Morrison" }
]
dependencies = [
  "pyserial>=3.5",
  "python-dateutil>=2.8.2",
  "pandas>=2.2.3",
  "numpy>=2.1.3",
  "DateTime>=5.5,<6.0",
  "matplotlib>=3.9.2",
  "fitdecode>=0.1.0",
]

[project.urls]
Repository = "https://github.com/mcharlesmorrison/cass_logger_dev"

[tool.setuptools.packages.find]
where = ["."]
